[#15682] use Arrays.asList